[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-x-backend"
version = "0.1.0"
description = "Blockchain transaction analysis system for tracking fund flows and cross-chain transactions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "etherscan-python>=2.1.0",
    "web3>=5.29,<6",  # Compatible with ethereum-etl 2.4.2
    "eth-abi>=2.2.0,<3.0.0",  # Compatible with ethereum-etl 2.4.2
    "eth-utils==1.10",  # Compatible with ethereum-etl 2.4.2
    "urllib3<2",  # Compatible with ethereum-etl 2.4.2
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["configs/*.json"]
